--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
   },
   "homepage": "https://github.com/phillipgibb/sovrin_tools#readme",
   "devDependencies": {
-    "@babel/core": "7.0.1",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
     "@babel/node": "7.0.0",
     "@babel/plugin-proposal-class-properties": "7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "7.0.0",
-    "babel-loader": "8.0.2",
+    "babel-loader": "^8.0.2",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
@@ -46,20 +47,20 @@
     "sass-loader": "7.1.0",
     "style-loader": "^0.23.0",
     "webpack": "^4.22.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "3.1.8"
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
     "app-root-path": "^2.1.0",
-    "axios": "^0.18.0",
-    "bootstrap": "^4.1.3",
+    "axios": "^0.18.1",
+    "bootstrap": "^4.3.1",
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
     "dotenv-webpack": "^1.5.7",
     "eslint": "^5.8.0",
     "fs": "0.0.1-security",
     "helmet": "^3.14.0",
-    "indy-sdk": "^1.6.2",
+    "indy-sdk": "^1.11.1",
     "morgan": "^1.9.1",
     "node": "^10.12.0",
     "react": "16.5.1",
